// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`huffmann > compute binary map 2`] = `
Map {
  "000" => "o",
  "00100" => "t",
  "001010" => "b",
  "001011" => "e",
  "0011" => "i",
  "01" => "a",
  "10000" => "y",
  "10001" => "v",
  "1001000" => "x",
  "1001001" => "w",
  "100101" => "r",
  "10011" => "u",
  "101" => "p",
  "11" => "s",
}
`;

exports[`huffmann > compute pattern tree 1`] = `
{
  "count": 200,
  "left": {
    "count": 81,
    "left": {
      "count": 40,
      "left": {
        "count": 18,
        "symbol": "o",
      },
      "right": {
        "count": 22,
        "left": {
          "count": 10,
          "left": {
            "count": 5,
            "symbol": "t",
          },
          "right": {
            "count": 5,
            "left": {
              "count": 2,
              "symbol": "b",
            },
            "right": {
              "count": 3,
              "symbol": "e",
            },
          },
        },
        "right": {
          "count": 12,
          "symbol": "i",
        },
      },
    },
    "right": {
      "count": 41,
      "symbol": "a",
    },
  },
  "right": {
    "count": 119,
    "left": {
      "count": 59,
      "left": {
        "count": 29,
        "left": {
          "count": 13,
          "left": {
            "count": 6,
            "symbol": "y",
          },
          "right": {
            "count": 7,
            "symbol": "v",
          },
        },
        "right": {
          "count": 16,
          "left": {
            "count": 7,
            "left": {
              "count": 3,
              "left": {
                "count": 1,
                "symbol": "x",
              },
              "right": {
                "count": 2,
                "symbol": "w",
              },
            },
            "right": {
              "count": 4,
              "symbol": "r",
            },
          },
          "right": {
            "count": 9,
            "symbol": "u",
          },
        },
      },
      "right": {
        "count": 30,
        "symbol": "p",
      },
    },
    "right": {
      "count": 60,
      "left": {
        "count": 60,
        "symbol": "s",
      },
      "right": {
        "count": 0,
        "symbol": "",
      },
    },
  },
}
`;

exports[`huffmann > compute right tree 1`] = `
{
  "count": 200,
  "left": {
    "count": 60,
    "symbol": "s",
  },
  "right": {
    "count": 140,
    "left": {
      "count": 41,
      "symbol": "a",
    },
    "right": {
      "count": 99,
      "left": {
        "count": 30,
        "symbol": "p",
      },
      "right": {
        "count": 69,
        "left": {
          "count": 18,
          "symbol": "o",
        },
        "right": {
          "count": 51,
          "left": {
            "count": 12,
            "symbol": "i",
          },
          "right": {
            "count": 39,
            "left": {
              "count": 9,
              "symbol": "u",
            },
            "right": {
              "count": 30,
              "left": {
                "count": 7,
                "symbol": "v",
              },
              "right": {
                "count": 23,
                "left": {
                  "count": 6,
                  "symbol": "y",
                },
                "right": {
                  "count": 17,
                  "left": {
                    "count": 5,
                    "symbol": "t",
                  },
                  "right": {
                    "count": 12,
                    "left": {
                      "count": 4,
                      "symbol": "r",
                    },
                    "right": {
                      "count": 8,
                      "left": {
                        "count": 3,
                        "symbol": "e",
                      },
                      "right": {
                        "count": 5,
                        "left": {
                          "count": 2,
                          "symbol": "b",
                        },
                        "right": {
                          "count": 3,
                          "left": {
                            "count": 2,
                            "symbol": "w",
                          },
                          "right": {
                            "count": 1,
                            "symbol": "x",
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`huffmann > compute tree 1`] = `
{
  "root": {
    "count": 200,
    "left": {
      "count": 81,
      "left": {
        "count": 40,
        "left": {
          "count": 18,
          "symbol": "o",
        },
        "right": {
          "count": 22,
          "left": {
            "count": 10,
            "left": {
              "count": 5,
              "symbol": "t",
            },
            "right": {
              "count": 5,
              "left": {
                "count": 2,
                "symbol": "b",
              },
              "right": {
                "count": 3,
                "symbol": "e",
              },
            },
          },
          "right": {
            "count": 12,
            "symbol": "i",
          },
        },
      },
      "right": {
        "count": 41,
        "symbol": "a",
      },
    },
    "right": {
      "count": 119,
      "left": {
        "count": 59,
        "left": {
          "count": 29,
          "left": {
            "count": 13,
            "left": {
              "count": 6,
              "symbol": "y",
            },
            "right": {
              "count": 7,
              "symbol": "v",
            },
          },
          "right": {
            "count": 16,
            "left": {
              "count": 7,
              "left": {
                "count": 3,
                "left": {
                  "count": 1,
                  "symbol": "x",
                },
                "right": {
                  "count": 2,
                  "symbol": "w",
                },
              },
              "right": {
                "count": 4,
                "symbol": "r",
              },
            },
            "right": {
              "count": 9,
              "symbol": "u",
            },
          },
        },
        "right": {
          "count": 30,
          "symbol": "p",
        },
      },
      "right": {
        "count": 60,
        "symbol": "s",
      },
    },
  },
}
`;

exports[`huffmann > compute tree with maxDepth 1`] = `
{
  "root": {
    "count": 200,
    "left": {
      "count": 81,
      "left": {
        "count": 40,
        "left": {
          "count": 18,
          "symbol": "o",
        },
        "right": {
          "count": 22,
          "left": {
            "count": 10,
            "left": {
              "count": 5,
              "symbol": "t",
            },
            "right": {
              "count": 5,
              "left": {
                "count": 2,
                "symbol": "b",
              },
              "right": {
                "count": 3,
                "symbol": "e",
              },
            },
          },
          "right": {
            "count": 12,
            "symbol": "i",
          },
        },
      },
      "right": {
        "count": 41,
        "symbol": "a",
      },
    },
    "right": {
      "count": 119,
      "left": {
        "count": 59,
        "left": {
          "count": 29,
          "left": {
            "count": 13,
            "left": {
              "count": 6,
              "symbol": "y",
            },
            "right": {
              "count": 7,
              "symbol": "v",
            },
          },
          "right": {
            "count": 16,
            "left": {
              "count": 7,
              "left": {
                "count": 3,
                "left": {
                  "count": 1,
                  "symbol": "x",
                },
                "right": {
                  "count": 2,
                  "symbol": "w",
                },
              },
              "right": {
                "count": 4,
                "symbol": "r",
              },
            },
            "right": {
              "count": 9,
              "symbol": "u",
            },
          },
        },
        "right": {
          "count": 30,
          "symbol": "p",
        },
      },
      "right": {
        "count": 60,
        "symbol": "s",
      },
    },
  },
  "subRoot": {
    "count": 39,
    "left": {
      "count": 16,
      "left": {
        "count": 7,
        "left": {
          "count": 3,
          "symbol": "e",
        },
        "right": {
          "count": 4,
          "symbol": "r",
        },
      },
      "right": {
        "count": 9,
        "symbol": "u",
      },
    },
    "right": {
      "count": 23,
      "left": {
        "count": 10,
        "left": {
          "count": 5,
          "symbol": "t",
        },
        "right": {
          "count": 5,
          "left": {
            "count": 2,
            "symbol": "w",
          },
          "right": {
            "count": 3,
            "left": {
              "count": 1,
              "symbol": "x",
            },
            "right": {
              "count": 2,
              "symbol": "b",
            },
          },
        },
      },
      "right": {
        "count": 13,
        "left": {
          "count": 6,
          "symbol": "y",
        },
        "right": {
          "count": 7,
          "symbol": "v",
        },
      },
    },
  },
}
`;

exports[`huffmann > encode 1`] = `"1001001100100100101100101100101110010110010110010110010100100001000010000100001001000010000100001000010000100001001110011100111001110011100111001110011100110011001100110011001100110011001100110011001100110000000000000000000000000000000000000000000000000000001011011011011011011011011011011011011011011011011011011011011011011011011011011011011011010101010101010101010101010101010101010101010101010101010101010101010101010101010101111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111100011000110001100011000110001100010010100010101001000"`;
